[package]
name = "mathsim"
version = "0.1.0"
edition = "2024"

[dependencies]
derivative = "2.2.0"
disk-persist = "0.1.0"
ecolor = { version = "0.31.1", features = ["serde"] }
eframe = "0.31.1"
egui = { version = "0.31.1", features = ["serde"] }
env_logger = "0.11.8"
glam = { version = "0.30.1", features = ["serde"] }
log = "0.4.27"
rand = "0.9.0"
rayon = "1.10.0"
serde = "1.0.219"
signifix = "0.10.1"
